# rustified-svelte

./: .gitignore  package-lock.json  package.json  tailwind.config.js  vite.config.ts
passgen/: Cargo.toml
passgen/src/: lib.rs  utils.rs
scripts/: build.sh
src/routes/: +page.svelte
